--- a/notebooks/hypothesis1_eda.ipynb
+++ b/notebooks/hypothesis1_eda.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,12 +46,12 @@
       "       'if_fielding_alignment', 'of_fielding_alignment', 'spin_axis',\n",
       "       'delta_home_win_exp', 'delta_run_exp'],\n",
       "      dtype='object')\n",
-      "(695196, 92)\n"
+      "(708540, 92)\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/statcast_04_04_2022_10_03_2022.csv')\n",
+    "df = pd.read_csv('../data/statcast_full_season.csv')\n",
     "print(df.columns)\n",
     "print(df.shape)"
    ]
@@ -101,48 +101,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>93.5</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>-0.76</td>\n",
-       "      <td>3.38</td>\n",
-       "      <td>TEX</td>\n",
+       "      <td>2022-10-05</td>\n",
+       "      <td>80.8</td>\n",
+       "      <td>Changeup</td>\n",
+       "      <td>-0.32</td>\n",
+       "      <td>2.24</td>\n",
+       "      <td>BAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>80.9</td>\n",
-       "      <td>Curveball</td>\n",
-       "      <td>-0.66</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>TEX</td>\n",
+       "      <td>2022-10-05</td>\n",
+       "      <td>97.7</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>BAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>92.3</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>-0.20</td>\n",
-       "      <td>3.12</td>\n",
-       "      <td>TEX</td>\n",
+       "      <td>2022-10-05</td>\n",
+       "      <td>84.9</td>\n",
+       "      <td>Changeup</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>BAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>94.3</td>\n",
+       "      <td>2022-10-05</td>\n",
+       "      <td>97.2</td>\n",
        "      <td>4-Seam Fastball</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>3.69</td>\n",
-       "      <td>TEX</td>\n",
+       "      <td>-0.55</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>BAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>93.4</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>-0.62</td>\n",
-       "      <td>2.19</td>\n",
-       "      <td>TEX</td>\n",
+       "      <td>2022-10-05</td>\n",
+       "      <td>86.2</td>\n",
+       "      <td>Cutter</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>BAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -154,70 +154,70 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>695191</th>\n",
+       "      <th>708535</th>\n",
        "      <td>2022-04-07</td>\n",
        "      <td>91.8</td>\n",
        "      <td>Split-Finger</td>\n",
        "      <td>-0.89</td>\n",
        "      <td>2.05</td>\n",
-       "      <td>HOU</td>\n",
+       "      <td>LAA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>695192</th>\n",
+       "      <th>708536</th>\n",
        "      <td>2022-04-07</td>\n",
        "      <td>86.9</td>\n",
        "      <td>Slider</td>\n",
        "      <td>-0.64</td>\n",
        "      <td>1.74</td>\n",
-       "      <td>HOU</td>\n",
+       "      <td>LAA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>695193</th>\n",
+       "      <th>708537</th>\n",
        "      <td>2022-04-07</td>\n",
        "      <td>99.2</td>\n",
        "      <td>4-Seam Fastball</td>\n",
        "      <td>1.53</td>\n",
        "      <td>1.84</td>\n",
-       "      <td>HOU</td>\n",
+       "      <td>LAA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>695194</th>\n",
+       "      <th>708538</th>\n",
        "      <td>2022-04-07</td>\n",
        "      <td>97.9</td>\n",
        "      <td>4-Seam Fastball</td>\n",
        "      <td>-0.62</td>\n",
        "      <td>2.01</td>\n",
-       "      <td>HOU</td>\n",
+       "      <td>LAA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>695195</th>\n",
+       "      <th>708539</th>\n",
        "      <td>2022-04-07</td>\n",
        "      <td>99.8</td>\n",
        "      <td>4-Seam Fastball</td>\n",
        "      <td>1.32</td>\n",
        "      <td>-0.29</td>\n",
-       "      <td>HOU</td>\n",
+       "      <td>LAA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>695196 rows × 6 columns</p>\n",
+       "<p>708540 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         game_date  release_speed       pitch_name  plate_x  plate_z team\n",
-       "0       2022-10-02           93.5  4-Seam Fastball    -0.76     3.38  TEX\n",
-       "1       2022-10-02           80.9        Curveball    -0.66     0.49  TEX\n",
-       "2       2022-10-02           92.3  4-Seam Fastball    -0.20     3.12  TEX\n",
-       "3       2022-10-02           94.3  4-Seam Fastball     0.53     3.69  TEX\n",
-       "4       2022-10-02           93.4  4-Seam Fastball    -0.62     2.19  TEX\n",
+       "0       2022-10-05           80.8         Changeup    -0.32     2.24  BAL\n",
+       "1       2022-10-05           97.7  4-Seam Fastball     0.10     2.59  BAL\n",
+       "2       2022-10-05           84.9         Changeup     1.35     2.31  BAL\n",
+       "3       2022-10-05           97.2  4-Seam Fastball    -0.55     2.30  BAL\n",
+       "4       2022-10-05           86.2           Cutter     0.36     3.00  BAL\n",
        "...            ...            ...              ...      ...      ...  ...\n",
-       "695191  2022-04-07           91.8     Split-Finger    -0.89     2.05  HOU\n",
-       "695192  2022-04-07           86.9           Slider    -0.64     1.74  HOU\n",
-       "695193  2022-04-07           99.2  4-Seam Fastball     1.53     1.84  HOU\n",
-       "695194  2022-04-07           97.9  4-Seam Fastball    -0.62     2.01  HOU\n",
-       "695195  2022-04-07           99.8  4-Seam Fastball     1.32    -0.29  HOU\n",
+       "708535  2022-04-07           91.8     Split-Finger    -0.89     2.05  LAA\n",
+       "708536  2022-04-07           86.9           Slider    -0.64     1.74  LAA\n",
+       "708537  2022-04-07           99.2  4-Seam Fastball     1.53     1.84  LAA\n",
+       "708538  2022-04-07           97.9  4-Seam Fastball    -0.62     2.01  LAA\n",
+       "708539  2022-04-07           99.8  4-Seam Fastball     1.32    -0.29  LAA\n",
        "\n",
-       "[695196 rows x 6 columns]"
+       "[708540 rows x 6 columns]"
       ]
      },
      "execution_count": 5,
@@ -227,12 +227,12 @@
    ],
    "source": [
     "# filter columns\n",
-    "df['team'] = [row['away_team'] if row['inning_topbot'] == 'Top' else row['home_team'] for index,row in df.iterrows()]\n",
+    "df['team'] = [row['home_team'] if row['inning_topbot'] == 'Top' else row['away_team'] for index,row in df.iterrows()]\n",
     "columns = ['game_date', 'release_speed', 'pitch_name', 'plate_x', 'plate_z', 'team']\n",
     "filtered = df[columns]\n",
     "# avg_pitch_speeds = df.groupby('pitch_name').mean()['release_speed'].reset_index()\n",
     "# filtered.merge(avg_pitch_speeds, on = 'pitch_name')\n",
-    "filtered.sample(175000).to_csv('../data/hypothesis_1_20221109_sample20perc.csv', index = False)\n",
+    "filtered.sample(175000).to_csv('../data/hypothesis_1_20221120_sample20perc.csv', index = False)\n",
     "only_strikes = df[df.description == 'called_strike']\n",
     "print('min x: ',only_strikes.plate_x.min(), '|', 'max x: ', only_strikes.plate_x.max())\n",
     "print('min z: ', only_strikes.plate_z.min(), '|', 'max z: ', only_strikes.plate_z.max())\n",
@@ -241,42 +241,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dimitriospsaltos/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['game_date', 'home_team', 'away_team', 'release_speed', 'outs_when_up',\n",
-      "       'inning', 'inning_topbot', 'pitch_name', 'pitch_type', 'plate_x',\n",
-      "       'plate_z'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# filter columns\n",
-    "columns = ['game_date', 'home_team', 'away_team', 'release_speed',\n",
-    "       'inning_topbot', 'pitch_name',\n",
-    "       'plate_x', 'plate_z', 'description']\n",
+    "columns = ['game_date', 'team', 'pitch_name', 'pitch_type']#,\n",
+    "#        'plate_x', 'plate_z', 'description']\n",
     "filtered = df[columns]\n",
     "# avg_pitch_speeds = df.groupby('pitch_name').mean()['release_speed'].reset_index()\n",
     "# filtered.merge(avg_pitch_speeds, on = 'pitch_name')\n",
     "# filtered.to_csv('../data/hypothesis_1_20221108.csv', index = False)\n",
-    "filtered.descri"
+    "group_proportions = filtered.groupby(['game_date', 'team', \n",
+    "                  'pitch_name']).count()['pitch_type'].reset_index()\n",
+    "group_proportions.columns = ['game_date', 'team', 'pitch_name', 'n_pitches']\n",
+    "group_proportions.to_csv('../data/hypothesis_1_pitchProportions_20221120.csv', index = False)"
    ]
   },
   {
@@ -302,6 +281,13 @@
     "       autopct='%1.1f%%')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
