--- a/notebooks/hypothesis5_eda.ipynb
+++ b/notebooks/hypothesis5_eda.ipynb
@@ -25,398 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['pitch_type', 'game_date', 'release_speed', 'release_pos_x',\n",
-      "       'release_pos_z', 'player_name', 'batter', 'pitcher', 'events',\n",
-      "       'description', 'spin_dir', 'spin_rate_deprecated',\n",
-      "       'break_angle_deprecated', 'break_length_deprecated', 'zone', 'des',\n",
-      "       'game_type', 'stand', 'p_throws', 'home_team', 'away_team', 'type',\n",
-      "       'hit_location', 'bb_type', 'balls', 'strikes', 'game_year', 'pfx_x',\n",
-      "       'pfx_z', 'plate_x', 'plate_z', 'on_3b', 'on_2b', 'on_1b',\n",
-      "       'outs_when_up', 'inning', 'inning_topbot', 'hc_x', 'hc_y',\n",
-      "       'tfs_deprecated', 'tfs_zulu_deprecated', 'fielder_2', 'umpire', 'sv_id',\n",
-      "       'vx0', 'vy0', 'vz0', 'ax', 'ay', 'az', 'sz_top', 'sz_bot',\n",
-      "       'hit_distance_sc', 'launch_speed', 'launch_angle', 'effective_speed',\n",
-      "       'release_spin_rate', 'release_extension', 'game_pk', 'pitcher.1',\n",
-      "       'fielder_2.1', 'fielder_3', 'fielder_4', 'fielder_5', 'fielder_6',\n",
-      "       'fielder_7', 'fielder_8', 'fielder_9', 'release_pos_y',\n",
-      "       'estimated_ba_using_speedangle', 'estimated_woba_using_speedangle',\n",
-      "       'woba_value', 'woba_denom', 'babip_value', 'iso_value',\n",
-      "       'launch_speed_angle', 'at_bat_number', 'pitch_number', 'pitch_name',\n",
-      "       'home_score', 'away_score', 'bat_score', 'fld_score', 'post_away_score',\n",
-      "       'post_home_score', 'post_bat_score', 'post_fld_score',\n",
-      "       'if_fielding_alignment', 'of_fielding_alignment', 'spin_axis',\n",
-      "       'delta_home_win_exp', 'delta_run_exp'],\n",
-      "      dtype='object')\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a656de61b939>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m        \u001b[0;34m'outs_when_up'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inning'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inning_topbot'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'at_bat_number'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'pitch_number'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'pitch_name'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m        'home_score', 'away_score']\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mfiltered\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mfiltered\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'game_date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgame_date\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dimitriospsaltos/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>game_date</th>\n",
-       "      <th>player_name</th>\n",
-       "      <th>batter</th>\n",
-       "      <th>pitcher</th>\n",
-       "      <th>events</th>\n",
-       "      <th>description</th>\n",
-       "      <th>stand</th>\n",
-       "      <th>p_throws</th>\n",
-       "      <th>home_team</th>\n",
-       "      <th>away_team</th>\n",
-       "      <th>release_spin_rate</th>\n",
-       "      <th>outs_when_up</th>\n",
-       "      <th>inning</th>\n",
-       "      <th>inning_topbot</th>\n",
-       "      <th>at_bat_number</th>\n",
-       "      <th>pitch_number</th>\n",
-       "      <th>pitch_name</th>\n",
-       "      <th>home_score</th>\n",
-       "      <th>away_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>Zastryzny, Rob</td>\n",
-       "      <td>663993</td>\n",
-       "      <td>642239</td>\n",
-       "      <td>strikeout</td>\n",
-       "      <td>foul_tip</td>\n",
-       "      <td>L</td>\n",
-       "      <td>L</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>TEX</td>\n",
-       "      <td>2451.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>78</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>Zastryzny, Rob</td>\n",
-       "      <td>663993</td>\n",
-       "      <td>642239</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ball</td>\n",
-       "      <td>L</td>\n",
-       "      <td>L</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>TEX</td>\n",
-       "      <td>2266.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>78</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Curveball</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>Zastryzny, Rob</td>\n",
-       "      <td>663993</td>\n",
-       "      <td>642239</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>foul</td>\n",
-       "      <td>L</td>\n",
-       "      <td>L</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>TEX</td>\n",
-       "      <td>2321.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>78</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>Zastryzny, Rob</td>\n",
-       "      <td>663993</td>\n",
-       "      <td>642239</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ball</td>\n",
-       "      <td>L</td>\n",
-       "      <td>L</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>TEX</td>\n",
-       "      <td>2391.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>78</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>Zastryzny, Rob</td>\n",
-       "      <td>663993</td>\n",
-       "      <td>642239</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>called_strike</td>\n",
-       "      <td>L</td>\n",
-       "      <td>L</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>TEX</td>\n",
-       "      <td>2446.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>78</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>695191</th>\n",
-       "      <td>2022-04-07</td>\n",
-       "      <td>Ohtani, Shohei</td>\n",
-       "      <td>514888</td>\n",
-       "      <td>660271</td>\n",
-       "      <td>strikeout</td>\n",
-       "      <td>called_strike</td>\n",
-       "      <td>R</td>\n",
-       "      <td>R</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>1314.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Split-Finger</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>695192</th>\n",
-       "      <td>2022-04-07</td>\n",
-       "      <td>Ohtani, Shohei</td>\n",
-       "      <td>514888</td>\n",
-       "      <td>660271</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>called_strike</td>\n",
-       "      <td>R</td>\n",
-       "      <td>R</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>2440.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Slider</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>695193</th>\n",
-       "      <td>2022-04-07</td>\n",
-       "      <td>Ohtani, Shohei</td>\n",
-       "      <td>514888</td>\n",
-       "      <td>660271</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ball</td>\n",
-       "      <td>R</td>\n",
-       "      <td>R</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>2320.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>695194</th>\n",
-       "      <td>2022-04-07</td>\n",
-       "      <td>Ohtani, Shohei</td>\n",
-       "      <td>514888</td>\n",
-       "      <td>660271</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>called_strike</td>\n",
-       "      <td>R</td>\n",
-       "      <td>R</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>2164.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>695195</th>\n",
-       "      <td>2022-04-07</td>\n",
-       "      <td>Ohtani, Shohei</td>\n",
-       "      <td>514888</td>\n",
-       "      <td>660271</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ball</td>\n",
-       "      <td>R</td>\n",
-       "      <td>R</td>\n",
-       "      <td>LAA</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>2182.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Top</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4-Seam Fastball</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>695196 rows × 19 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        game_date     player_name  batter  pitcher     events    description  \\\n",
-       "0      2022-10-02  Zastryzny, Rob  663993   642239  strikeout       foul_tip   \n",
-       "1      2022-10-02  Zastryzny, Rob  663993   642239        NaN           ball   \n",
-       "2      2022-10-02  Zastryzny, Rob  663993   642239        NaN           foul   \n",
-       "3      2022-10-02  Zastryzny, Rob  663993   642239        NaN           ball   \n",
-       "4      2022-10-02  Zastryzny, Rob  663993   642239        NaN  called_strike   \n",
-       "...           ...             ...     ...      ...        ...            ...   \n",
-       "695191 2022-04-07  Ohtani, Shohei  514888   660271  strikeout  called_strike   \n",
-       "695192 2022-04-07  Ohtani, Shohei  514888   660271        NaN  called_strike   \n",
-       "695193 2022-04-07  Ohtani, Shohei  514888   660271        NaN           ball   \n",
-       "695194 2022-04-07  Ohtani, Shohei  514888   660271        NaN  called_strike   \n",
-       "695195 2022-04-07  Ohtani, Shohei  514888   660271        NaN           ball   \n",
-       "\n",
-       "       stand p_throws home_team away_team  release_spin_rate  outs_when_up  \\\n",
-       "0          L        L       LAA       TEX             2451.0             2   \n",
-       "1          L        L       LAA       TEX             2266.0             2   \n",
-       "2          L        L       LAA       TEX             2321.0             2   \n",
-       "3          L        L       LAA       TEX             2391.0             2   \n",
-       "4          L        L       LAA       TEX             2446.0             2   \n",
-       "...      ...      ...       ...       ...                ...           ...   \n",
-       "695191     R        R       LAA       HOU             1314.0             0   \n",
-       "695192     R        R       LAA       HOU             2440.0             0   \n",
-       "695193     R        R       LAA       HOU             2320.0             0   \n",
-       "695194     R        R       LAA       HOU             2164.0             0   \n",
-       "695195     R        R       LAA       HOU             2182.0             0   \n",
-       "\n",
-       "        inning inning_topbot  at_bat_number  pitch_number       pitch_name  \\\n",
-       "0            9           Top             78             6  4-Seam Fastball   \n",
-       "1            9           Top             78             5        Curveball   \n",
-       "2            9           Top             78             4  4-Seam Fastball   \n",
-       "3            9           Top             78             3  4-Seam Fastball   \n",
-       "4            9           Top             78             2  4-Seam Fastball   \n",
-       "...        ...           ...            ...           ...              ...   \n",
-       "695191       1           Top              1             5     Split-Finger   \n",
-       "695192       1           Top              1             4           Slider   \n",
-       "695193       1           Top              1             3  4-Seam Fastball   \n",
-       "695194       1           Top              1             2  4-Seam Fastball   \n",
-       "695195       1           Top              1             1  4-Seam Fastball   \n",
-       "\n",
-       "        home_score  away_score  \n",
-       "0                8           3  \n",
-       "1                8           3  \n",
-       "2                8           3  \n",
-       "3                8           3  \n",
-       "4                8           3  \n",
-       "...            ...         ...  \n",
-       "695191           0           0  \n",
-       "695192           0           0  \n",
-       "695193           0           0  \n",
-       "695194           0           0  \n",
-       "695195           0           0  \n",
-       "\n",
-       "[695196 rows x 19 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
